<resources>
    <string name="app_name">Srm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">669770743129288</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_home">Rutas Metropolitanas</string>
    <string name="map_option">Ubicación mas cercana</string>
    <string name="pay_option">Recarga Online</string>
    <string name="time_option">Medidor de Tiempo</string>
    <string name="exit_option">Salir</string>

    <string name="internet_disconnected_error">Debe estar conectado a internet</string>
    <string name="authorize_error">Debe ingresar con su cuenta de Facebook o Google+</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="label_service_type">Servicio de Transporte</string>
    <string name="prompt_service_type">Seleccione Servicio</string>
    <string name="prompt_locations_update">Buscando estaciones en línea</string>
    <string name="title_locations_update">Espere por favor, esta operación puede tardar algunos segundos</string>
    <string name="data_locations_update">No se encontraron estaciones para el servicio seleccionado</string>
    <string name="label_price">Monto S/.</string>
    <string name="hint_price">Monto a cargar</string>
    <string name="hint_card_number">Número de tarjeta</string>
    <string name="label_card_service">Tarjeta de transporte</string>
    <string name="action_pay">Recargar</string>
    <string name="action_pay_cancel">Cancelar</string>
    <string name="message_payment_ok">La recarga se realizo satisfactoriamente</string>
    <string name="action_payment">Aceptar</string>

    <string name="title_activity_pago">PagoActivity</string>

    <string-array name="servicioTransporte">
        <item>Seleccione</item>
        <item>Metropolitano</item>
        <item>Metro de Lima</item>
    </string-array>

    <string-array name="bancos">
        <item>Seleccione</item>
        <item>PAYPAL</item>
    </string-array>


    <string-array name="meses">
        <item>Seleccione</item>
        <item>Enero</item>
        <item>Febrero</item>
        <item>Marzo</item>
    </string-array>


    <string-array name="annos">
        <item>Seleccione</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
    </string-array>

    <string name="title_activity_ubica">Ubica</string>


    <string name="title_activity_tiempo">Tiempo</string>



    <string name="title_activity_mensaje">Mensaje</string>

</resources>
