<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.falcotech.srm.MensajeActivity"
    android:baselineAligned="true"
    android:background="#ff24b7ff">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff85ffff"
        android:clickable="false"
        android:textAlignment="center"
        android:layout_marginTop="5dp"
        android:padding="15dp"
        android:transitionGroup="false">

        <ImageView
            android:id="@+id/widget45"
            android:layout_width="@dimen/abc_action_button_min_width_material"
            android:layout_height="@dimen/abc_action_bar_stacked_max_height"
            android:src="@drawable/location"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title_activity_home"
            android:id="@+id/textView"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_payment_ok"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="106dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_payment"
            android:id="@+id/btnConfirmPayment"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp" />
    </RelativeLayout>

</LinearLayout>
