<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff24b7ff"
    android:baselineAligned="true"
    android:orientation="vertical"
    tools:context="com.falcotech.srm.MapActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ff85ffff"
        android:clickable="false"
        android:padding="15dp"
        android:textAlignment="center"
        android:transitionGroup="false">

        <ImageView
            android:id="@+id/widget45"
            android:layout_width="@dimen/abc_action_button_min_width_material"
            android:layout_height="@dimen/abc_action_bar_stacked_max_height"
            android:src="@drawable/location" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/title_activity_home"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/label_service_type"
            android:id="@+id/txtServiceType"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spServiceType"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/txtServiceType"
            android:layout_toEndOf="@+id/txtServiceType"
            android:prompt="@string/prompt_service_type"
            android:entries="@array/service_type_array"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:padding="15dp">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>
</LinearLayout>
